# VideoPokerTraining

./: CMakeLists.txt  LICENSE  README.md  card.cpp  card.hpp  deck.cpp  enumeration.hpp  graphics.cpp  graphics.hpp  main.cpp
include/: MainWindow.hpp  card.hpp  deck.hpp  enumeration.hpp  game.hpp  graphics.hpp
src/: MainWindow.cpp  card.cpp  deck.cpp  game.cpp  graphics.cpp  main.cpp
